src/tui/tests/snapshots/rmcl__tui__tests__snapshots__empty_app_renders_the_complete_frame.snap
---
source: src/tui/tests/snapshots.rs
expression: ui.screen()
---
"╭Instances─────────╮╭Content───────────────────────────────────────────────────────────────────────╮"
"│                  ││No instance selected                                                          │"
"│                  │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                  │╭ Installed   Mods • Resource Packs • Shaders • Screenshots • Worlds • Logs ───╮"
"│                  ││No instance selected.                                                         │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  │╰[l] launch  [⏎] content  [Shift+⏎] open dir  [Esc] kill  [a] add  [m] modpacks╯"
"│                  │╭Accounts─────────╮╭Settings───────────────────────────╮╭Overview──────────────╮"
"│                  ││No accounts.     ││No instance selected.              ││Ready                 │"
"│                  ││                 ││                                   ││                      │"
"│                  ││                 ││                                   ││                      │"
"╰──────────────────╯╰─────────────────╯╰───────────────────────────────────╯╰──────────────────────╯"
